Added jinja report processor and committed openapi and processor README with addition
